k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
spec:
  type: LoadBalancer
  selector:
    app: simple-app
  ports:
    - port: 80
      targetPort: 4499
