k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - www.devopstutorial.xyz
        - devopstutorial.xyz # change to your domain
      secretName: simple-app-tls
  rules:
    - host: www.devopstutorial.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-app-service
                port:
                  number: 80
    - host: devopstutorial.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-app-service
                port:
                  number: 80
